[project]
name = "llm-vertex"
version = "0.1"
description = "Plugin for LLM adding support for Google Cloud Vertex AI"
dependencies = [
    "llm",
    "google-cloud-aiplatform>=1.38.0",
]
readme = "README.md"
authors = [{name = "Justyn Shull"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">3.7"

[project.urls]
Homepage = "https://github.com/simonw/llm-markov"
Changelog = "https://github.com/simonw/llm-markov/releases"
Issues = "https://github.com/simonw/llm-markov/issues"

[project.entry-points.llm]
vertex = "llm_vertex"
